--- a/Personal Projects/Web Development/ServerSideJavascriptWeather/public/styles.css
+++ b/Personal Projects/Web Development/ServerSideJavascriptWeather/public/styles.css
@@ -6,3 +6,18 @@
 	padding: 20px;
 	
 }
+
+.visible
+{
+	opacity: 1;
+	filter: alpha(opacity=1);
+	visibility: visible;
+}
+
+.invisble
+{
+	z-index: -1;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	visibility: hidden;
+}
