--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -40,7 +40,14 @@ h1, h2, h3 {
 	margin-right: 4em;
 }
 
+#SP500PriceContainer {
+	height: 50%;
+	width: 40%
+}
+
 #SP500Price {
+	top: 50%;
+	left: 50%;
 	margin-top: 0.15em;
 	margin-left: 0.25em;
 	font-weight: bolder;
@@ -54,7 +61,7 @@ h1, h2, h3 {
 	padding: 0;
 	opacity: 0.5;
 	margin-top: 0em;
-	margin-left: 3.5em;
+	margin-left: 2.5em;
 	margin-right: 2.5em;
 }
 
