--- a/Personal Projects/Web Development/Recursion Trees/styles.css
+++ b/Personal Projects/Web Development/Recursion Trees/styles.css
@@ -6,7 +6,7 @@
 
 canvas {
 	position: absolute;
-	background: black;
+	background: white;
 
 }
 
@@ -14,6 +14,7 @@ canvas {
 	cursor: pointer;
 	outline: none;
 	border: none;
+	background: brown;
 	position: absolute;
 	left: 0;
 	bottom: 5%;
@@ -24,6 +25,7 @@ canvas {
 	border-radius: 50px;
 	color: black;
 	font-size: 20px;
+	color: white;
 	width: 300px;
 	overflow: hidden;
 }
