--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -36,7 +36,7 @@ h1, h2, h3 {
   background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");
 
   /* Set a specific height */
-   height: 100%;
+  height: 100%;
   width: 100%;
 
   /* Create the parallax scrolling effect */
@@ -56,13 +56,29 @@ h1, h2, h3 {
 /* Unique elements */
 #mainTitle {
 	background: white; 
-	width: 25%; 
-	height: 25%;
+	width: 29 %; 
+	height: 15%;
+    position: relative;
+  	top: 40%;
+  	-webkit-transform: translateY(-50%);
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
+ }
+
+ #mainTitle div {
+ 	overflow: hidden; 
+ 	white-space: nowrap; 
+ 	margin-top: -1em;
+ }
+
+#mainTitle div h1 {
+	position: relative;
+	top: 50%;
+  	-webkit-transform: translateY(-50%);
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
 }
 
-#mainTitle h1 {
-	margin-top: 0.25em;
-}
 #mainHeader {
 	margin-top: 1em;
 	margin-left: 4em;
