--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -33,7 +33,8 @@ h1, h2, h3 {
 .parallax {
 
   /* The image used */
-  background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");
+  /*background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");*/
+  background-image: url("https://image.shutterstock.com/image-photo/investing-stock-market-concept-gain-260nw-750493204.jpg");
 
   /* Set a specific height */
   height: 100%;
