--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -33,8 +33,8 @@ h1, h2, h3 {
 .parallax {
 
   /* The image used */
-  /*background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");*/
-  background-image: url("https://image.shutterstock.com/image-photo/investing-stock-market-concept-gain-260nw-750493204.jpg");
+  background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");
+  /*background-image: url("https://image.shutterstock.com/image-photo/investing-stock-market-concept-gain-260nw-750493204.jpg");*/
 
   /* Set a specific height */
   height: 100%;
@@ -57,7 +57,7 @@ h1, h2, h3 {
 /* Unique elements */
 #mainTitle {
 	background: white; 
-	width: 29 %; 
+	width: 50%; 
 	height: 15%;
     position: relative;
   	top: 40%;
@@ -78,6 +78,19 @@ h1, h2, h3 {
   	-webkit-transform: translateY(-50%);
   	-ms-transform: translateY(-50%);
   	transform: translateY(-50%);
+}
+
+#mainGraphic {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #mainHeader {
