--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -1,6 +1,6 @@
 /* Variable declarations */
 :root {
-	--fade-in-time: 4s;
+	--fade-in-time: 3s;
 	--move-up-start-pos: 1em;
 }
 /* Background Texture */
@@ -9,7 +9,7 @@ body {
 	background-image: url(/styles/cream-dust/png) repeat 0 0;
 	height: 100vh;
   	width: 100vw;
-  	 margin: 0;
+  	margin: 0;
   	padding: 0;
 }
 
@@ -46,7 +46,6 @@ h1, h2, h3 {
 
   /* The image used */
   background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");
-  /*background-image: url("https://image.shutterstock.com/image-photo/investing-stock-market-concept-gain-260nw-750493204.jpg");*/
 
   /* Set a specific height */
   height: 100%;
@@ -65,6 +64,30 @@ h1, h2, h3 {
 	margin-top: -10em;
 	margin-bottom: 12em;
 }
+
+.SecondaryDisplayCase {
+	position: relative;
+	color: white;
+	text-align: center;
+	padding: 2px;
+	margin: 2em;
+	width: 20%;
+	top: -5%;
+}
+
+.SecondaryDisplayCase h2 {
+	border-bottom: 3px solid white; 
+	position: relative;
+	top: 30%;
+}
+
+.SecondaryDisplayCase div {
+	font-size: 15px;
+	position: relative;
+	top: 30%;
+
+}
+
 
 /* Unique elements */
 #mainTitle {
