--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -45,7 +45,7 @@ h1, h2, h3 {
 .parallax {
 
   /* The image used */
-  background-image: url("https://www.htmlcsscolor.com/preview/gallery/2196F3.png");
+  background-image: url("parallax-background-2.png");
 
   /* Set a specific height */
   height: 100%;
