--- a/Personal Projects/Web Development/SP500 Website/public/styles/main.css
+++ b/Personal Projects/Web Development/SP500 Website/public/styles/main.css
@@ -67,24 +67,25 @@ h1, h2, h3 {
 
 .SecondaryDisplayCase {
 	position: relative;
-	color: white;
+	color: black;
 	text-align: center;
 	padding: 2px;
 	margin: 2em;
 	width: 20%;
 	top: -5%;
+  background: white;
 }
 
 .SecondaryDisplayCase h2 {
-	border-bottom: 3px solid white; 
+	border-bottom: 3px solid black; 
 	position: relative;
-	top: 30%;
+	top: 10%;
 }
 
 .SecondaryDisplayCase div {
 	font-size: 25px;
 	position: relative;
-	top: 30%;
+	top: 10%;
 
 }
 
